# Template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Dockerfile  README.md  dot_dockerignore  dot_env.example  dot_gitignore  dot_pre-commit-config.yaml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/dot_github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  main.py  settings.py
{{cookiecutter.project_slug}}/tests/: README.md  test_main.py
